quorum/test/tests/templating/Fail/D_9.quorum
class D is a B<number>, C<integer>

end